# telegram-bot

./: .dockerignore  .env.example  Cargo.toml  Dockerfile  README.md  knative.server.service.yml  server.service.yml
examples/: surrealdb.rs
scripts/: build.sh
src/: bot.rs  db.rs  handler.rs  main.rs
