[package]
name = "telegram-bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.18"
dotenv = "0.15.0"
log = "0.4.17"
serde = { version = "1.0.160", features = ["derive"] }
surrealdb = "1.0.0-beta.9"
teloxide = { version = "0.12", features = ["macros", "webhooks-axum"] }
tokio = { version =  "1.28", features = ["rt-multi-thread", "macros"] }
tower-http = { version = "0.4.0", features = ["trace"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
