[package]
name = "telegram-bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.20"
dotenv = "0.15.0"
log = "0.4.21"
serde = { version = "1.0.197", features = ["derive"] }
surrealdb = "1.2.0"
teloxide = { version = "0.12.2", features = ["macros", "webhooks-axum"] }
tokio = { version = "1.36.0", features = ["rt-multi-thread", "macros"] }
tower-http = { version = "0.4.0", features = ["trace"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
